--- a/Sentiment_analysis_tensorflow.ipynb
+++ b/Sentiment_analysis_tensorflow.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example pratice of NLP applied to sentimental analysis"
+    "##  Pratice example of NLP applied to sentimental analysis"
    ]
   },
   {
